--- a/PSUSphere/projectsite/templates/org_list.html
+++ b/PSUSphere/projectsite/templates/org_list.html
@@ -34,6 +34,7 @@
               <th scope="col">Name</th>
               <th scope="col">College</th>
               <th scope="col">Description</th>
+              <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -41,7 +42,17 @@
               <tr>
                 <td>{{ object.name}}</td>
                 <td>{{ object.college }}</td>
-                <td>{{ object.description }}</td> 
+                <td>{{ object.description }}</td>
+                <td>
+                    <a href="organization_list/{{ object.id }}">Edit</a>
+                </td> 
+              </try>
+              {% empty%}
+              <tr>
+                <td colspan="4" style="text-align: center">
+                <p class="text-sm font-weight-bold mb-0">No Records Found.</p>
+                </td>
+              </tr> 
               </tr>
               {% endfor %}
               </tbody>
