--- a/PSUSphere/projectsite/templates/org_list.html
+++ b/PSUSphere/projectsite/templates/org_list.html
@@ -45,6 +45,7 @@
                 <td>{{ object.description }}</td>
                 <td>
                     <a href="organization_list/{{ object.id }}">Edit</a>
+                    <a href="organization_list/{{ object.id }}/delete" class ="text-danger">Delete</a>
                 </td> 
               </try>
               {% empty%}
