--- a/PSUSphere/projectsite/templates/base.html
+++ b/PSUSphere/projectsite/templates/base.html
@@ -180,7 +180,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="forms.html">
+							<a href="{% url 'orgmember-list' %}">
 								<i class="la la-keyboard-o"></i>
 								<p>Org. Members</p>
 							</a>
@@ -200,8 +200,7 @@
 						<li class="nav-item active">
 							<a href="typography.html">
 								<i class="la la-font"></i>
-								<p>Typography</p>
-								<span class="badge badge-danger">25</span>
+								<p>Program</p>
 							</a>
 						</li>
 					</ul>
