Editing/Adding Text & Updating Image

--- a/PSUSphere/projectsite/templates/base.html
+++ b/PSUSphere/projectsite/templates/base.html
@@ -15,7 +15,7 @@
 		<div class="main-header">
 			<div class="logo-header">
 				<a href="index.html" class="logo">
-					Ready Dashboard
+					Dashboard
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -71,7 +71,7 @@
 											<div class="notif-icon notif-success"> <i class="la la-comment"></i> </div>
 											<div class="notif-content">
 												<span class="block">
-													Rahmad commented on Admin
+													Alexis commented on Admin
 												</span>
 												<span class="time">12 minutes ago</span> 
 											</div>
@@ -82,7 +82,7 @@
 											</div>
 											<div class="notif-content">
 												<span class="block">
-													Reza send messages to you
+													John Cris send messages to you
 												</span>
 												<span class="time">12 minutes ago</span> 
 											</div>
@@ -91,7 +91,7 @@
 											<div class="notif-icon notif-danger"> <i class="la la-heart"></i> </div>
 											<div class="notif-content">
 												<span class="block">
-													Farrah liked Admin
+													You liked Admin
 												</span>
 												<span class="time">17 minutes ago</span> 
 											</div>
@@ -104,14 +104,14 @@
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"><img src="{% static 'img/profile.jpg' %}" alt="user-img" width="36" class="img-circle"><span >Hizrian</span></span> </a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"><img src="{% static 'img/profile.png' %}" alt="user-img" width="36" class="img-circle"><span >Alexis</span></span> </a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
-										<div class="u-img"><img src="{% static 'img/profile.jpg' %}" alt="user"></div>
+										<div class="u-img"><img src="{% static 'img/profile.png' %}" alt="user"></div>
 										<div class="u-text">
-											<h4>Hizrian</h4>
-											<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+											<h4>John Alexis Rica</h4>
+											<p class="text-muted">202080107@psu.palawan.edu.ph</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
 										</div>
 									</li>
 									<div class="dropdown-divider"></div>
@@ -133,12 +133,12 @@
 				<div class="scrollbar-inner sidebar-wrapper">
 					<div class="user">
 						<div class="photo">
-							<img src="{% static 'img/profile.jpg' %}">
+							<img src="{% static 'img/profile.png' %}">
 						</div>
 						<div class="info">
 							<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 								<span>
-									Hizrian
+									John Alexis
 									<span class="user-level">Administrator</span>
 									<span class="caret"></span>
 								</span>
@@ -209,32 +209,6 @@
 			<div class="main-panel">
 				{% block content %}
 				{% endblock %}
-				<footer class="footer">
-					<div class="container-fluid">
-						<nav class="pull-left">
-							<ul class="nav">
-								<li class="nav-item">
-									<a class="nav-link" href="http://www.themekita.com">
-										ThemeKita
-									</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">
-										Help
-									</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">
-										Licenses
-									</a>
-								</li>
-							</ul>
-						</nav>
-						<div class="copyright ml-auto">
-							2018, made with <i class="la la-heart heart text-danger"></i> by <a href="http://www.themekita.com">ThemeKita</a>
-						</div>				
-					</div>
-				</footer>
 			</div>
 		</div>
 	</div>
