--- a/PSUSphere/projectsite/templates/home.html
+++ b/PSUSphere/projectsite/templates/home.html
@@ -6,10 +6,10 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Page Title</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-title">PSUSphere Activity</div>
+                        <div class="card-category">John Alexis Rica & John Cris Gaite</div>
                     </div>
-                    <div class="card-body">Hello, World</div>
+                    <div class="card-body">Hello Welcome!!</div>
                 </div>
             </div>
         </div>
